# GraphStudio

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  agent.html  environment.toml  environment.toml.example  environment.toml.local  how-to-use.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.claude/: launch.json
.superpowers/sdd/: task-16-report.md
data/agent/demo/: agent.db  smartstudio.db
docs/: SmartStudio_Engineering_Deck.pptx  article-selection-v7.md  configuration.md  dataview-read-composition.md  generate_deck.py  pg-extract-performance.md  planner-data-gaps.md  planner-prompts-clickhouse-run.md  planner-prompts-run.md  primer.md  smartstudio-mcp-user-guide.md  v1-cleanup-todo.md
docs/mcp/: claude-code-integration.md  mcp-json.md
docs/mcp/prompts/: 3110-rebalance-scan-doc.md  3x3-segmentation-doc.md  allocation-funnel-doc.md  brand-l1-mad-anomalies-doc.md  brand-similarity-active-top200.csv  brand-similarity-doc.md  brand-similarity-top200.csv  inventory-analysis-transcript.md  l1-l2-brand-channel-aggregation-doc.md  l1_l2_brand_channel_summary.csv  lw-revenue-correlations-doc.md  network-rebalance-scan-doc.md  per-dc-oh-parse-doc.md  percentile-analysis-doc.md  prompts-plain-english.md  rebalance-top25-waves-samples.csv
docs/plans/: source-unification.md
docs/superpowers/plans/: 2026-06-29-graphstudio-rename.md
docs/superpowers/specs/: 2026-06-29-graphstudio-rename-design.md
mcp-server/: .mcp.json.example  README.md  package-lock.json  package.json  tsconfig.json
mcp-server/deploy/: README.md  env.example
mcp-server/deploy/ansible/: example-playbook.yml
mcp-server/deploy/nginx/: smartstudio-mcp.conf
mcp-server/deploy/systemd/: smartstudio-mcp.service
mcp-server/scripts/: pack-release.sh
mcp-server/src/: glossary.ts  http.ts  index-http.ts  index.ts  register.ts  schema.ts  server.ts  tool.ts
mcp-server/src/__tests__/: canary.test.ts
mcp-server/src/tools/: article_detail.ts  clickhouse_dictionary.ts  clickhouse_query.ts  dataview_read.ts  describe.ts  describe_dataview.ts  describe_graph.ts  describe_source.ts  duckdb_query.ts  feedback.ts  filter_values.ts  glossary.ts  graph_cross_filter.ts  graph_node.ts  list.ts  (+10 more)
server/: Cargo.toml  build.rs
server/proto/: article_graph.proto  article_selection.proto  cross_filter.proto  rcl.proto
server/src/: app_state.rs  clickhouse.rs  db_config.rs  instance_config.rs  lib.rs  main.rs  pg_pools.rs  pipeline_assemblies.rs  router.rs  trace_db.rs
server/src/agent/: cache.rs  components.rs  config.rs  dashboards.rs  db.rs  llm.rs  mod.rs  schema.rs  schema.sql  tools.rs
server/src/agent/meter/: hook.rs  mod.rs  pricing.rs  wrap.rs  writer.rs
server/src/agent/routes/: components.rs  dashboards.rs  mod.rs  models.rs  pricing.rs  prompts.rs  sessions.rs  workspaces.rs
server/src/article_selection/: extractor.rs  materialize.rs  mod.rs  store.rs  types.rs
server/src/article_selection/migrations/: 0001_asv2_materialized_views.sql
server/src/cross_filter/: mod.rs  model.rs  resolver.rs
server/src/db/: mod.rs  schema.sql
server/src/graph/: build.rs  cross_filter.rs  exception.rs  graph.rs  memory.rs  mod.rs  parity.rs  project.rs  rollup.rs  traverse.rs  uam_adapter.rs
server/src/graph/legacy/: build.rs  exception.rs  graph.rs  mod.rs  projection.rs  psm_resolver.rs  resolver.rs  rollup.rs  rows.rs  traverse.rs
server/src/graph/legacy/source/: duckdb.rs  mod.rs
server/src/graph/rcl/: build.rs  explain.rs  hierarchy.rs  mod.rs  psm_resolver.rs
server/src/graph/source/: duckdb.rs  mod.rs
server/src/graph/spec/: mod.rs  parse.rs  validate.rs
server/src/handlers/: activity.rs  article_selection.rs  bundle.rs  components.rs  config_toml.rs  cross_filter.rs  datasources.rs  dataview_source.rs  dataviews.rs  derived_tables.rs  dimensions.rs  duckdb_query.rs  feedback.rs  filter_configs.rs  generate.rs  graph_articles.rs  graphs.rs  ingest.rs  language_packs.rs  mod.rs  modules.rs  parquet_browse.rs  pipeline_handler.rs  pipeline_v2.rs  saved_queries.rs  shared_pipelines.rs  snapshots.rs  sources.rs  submodules.rs  templates.rs  viewports.rs
server/src/pipeline/: context.rs  mod.rs  step.rs
server/src/pipeline/task/: bq_export.rs  duckdb_transform.rs  get_partitions.rs  loop_write_partitions.rs  mod.rs  pg_extract.rs  register_snapshot.rs  write_parquet.rs
server/src/query/: mod.rs  sql_split.rs
server/src/seed/: dataviews.rs  duckdb_views.rs  mod.rs  sources.rs
server/src/service/: connections.rs  dataviews.rs  error.rs  filter_configs.rs  graphs.rs  mod.rs  query.rs  sources.rs
server/src/services/: article_selection_grpc.rs  cross_filter_grpc.rs  graph_articles_grpc.rs  mod.rs  pipeline_scheduler.rs  rcl_grpc.rs
server/src/uam/: mod.rs  store.rs
server/supervisor/: backend.conf
server/templates/grpc-service/: build_rs.tera  cargo_toml.tera  main_rs.tera  proto.tera  rest_rs.tera  service_rs.tera
server/tests/: test_canaries.rs  test_crud.rs  test_generate.rs  test_health.rs  test_template_canaries.rs
server/tests/common/: mod.rs
sql/: article_selection_list_v2.sql  seed_article_selection_v2.sql
src/: App.tsx  index.css
src/__tests__/: AgentApp.canary.test.tsx  App.smoke.test.tsx  CoreServiceWorkspace.canary.test.tsx  WorkspaceLayout.canary.test.tsx
src/agent/: App.tsx  api.ts  charts.tsx
src/api/: client.ts
src/components/: ActivityPanel.tsx  BundleModal.tsx  DataViewPreview.tsx  InspectorPanel.tsx  RclTrace.tsx  SettingsModal.tsx  Sidebar.tsx
src/hooks/: useActivePipelineRun.ts  useActivitySSE.ts
src/layouts/: WorkspaceLayout.tsx
src/stores/: apps.ts  codeGen.ts  components.ts  dataviews.ts  dimensions.ts  filterConfigs.ts  modules.ts  submodules.ts  workspace.ts
(+86 files in other folders)
